--- a/app/css/global.css
+++ b/app/css/global.css
@@ -115,6 +115,9 @@ textarea{
 .icon-video-blue{
     background-position: -30px -340px;
 }
+.icon-txt-blue{
+    background-position: -30px -360px;
+}
 .icon-arrow-left-blue {
     background-position: -30px -240px;
 }
