--- a/app/css/bootstrap.css
+++ b/app/css/bootstrap.css
@@ -1939,7 +1939,6 @@ output {
   background-color: #ffffff;
   background-image: none;
   border: 1px solid #cccccc;
-  border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
@@ -3638,12 +3637,7 @@ input[type="button"].btn-block {
   margin-bottom: 1px;
 }
 
-@media (min-width: 768px) {
-  .navbar-right .dropdown-menu {
-    right: 0;
-    left: auto;
-  }
-}
+
 
 .btn-group,
 .btn-group-vertical {
@@ -6189,14 +6183,13 @@ button.close {
   left: 0;
   z-index: 1010;
   display: none;
-  max-width: 276px;
-  padding: 1px;
+  max-width: 800px;
+  padding: 1px 20px;
   text-align: left;
   white-space: normal;
-  background-color: #ffffff;
-  border: 1px solid #cccccc;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
+  background-color: #efefed;
+  border: 3px solid #5392c5;
+  border-radius: 3px;
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   background-clip: padding-box;
@@ -6218,19 +6211,26 @@ button.close {
   margin-left: -10px;
 }
 
+.popover .close{
+    margin-top: 7px;
+    font-size: 26px;
+    line-height: 20px;
+    color: #2777b6;
+}
+
 .popover-title {
-  padding: 8px 14px;
+  padding: 9px 0;
   margin: 0;
   font-size: 14px;
+  color: #9d9d9d;
   font-weight: normal;
   line-height: 18px;
-  background-color: #f7f7f7;
-  border-bottom: 1px solid #ebebeb;
-  border-radius: 5px 5px 0 0;
+  border-bottom: 1px solid #f9f9f9;
+  border-radius: 3px 3px 0 0;
 }
 
 .popover-content {
-  padding: 9px 14px;
+  padding: 10px 0;
 }
 
 .popover .arrow,
@@ -6244,78 +6244,74 @@ button.close {
 }
 
 .popover .arrow {
-  border-width: 11px;
+  border-width: 15px;
 }
 
 .popover .arrow:after {
-  border-width: 10px;
+  border-width: 12px;
   content: "";
 }
 
 .popover.top .arrow {
-  bottom: -11px;
+  bottom: -15px;
   left: 50%;
-  margin-left: -11px;
-  border-top-color: #999999;
-  border-top-color: rgba(0, 0, 0, 0.25);
+  margin-left: -15px;
+  border-top-color: #5392c5;
   border-bottom-width: 0;
 }
 
 .popover.top .arrow:after {
-  bottom: 1px;
-  margin-left: -10px;
-  border-top-color: #ffffff;
+  bottom:3px;
+  margin-left: -12px;
+  border-top-color: #efefed;
   border-bottom-width: 0;
   content: " ";
 }
 
 .popover.right .arrow {
   top: 50%;
-  left: -11px;
-  margin-top: -11px;
-  border-right-color: #999999;
-  border-right-color: rgba(0, 0, 0, 0.25);
+  left: -15px;
+  margin-top: -15px;
+  border-right-color: #5392c5;
   border-left-width: 0;
 }
 
 .popover.right .arrow:after {
-  bottom: -10px;
-  left: 1px;
-  border-right-color: #ffffff;
+  bottom: -12px;
+  left: 3px;
+  border-right-color: #efefed;
   border-left-width: 0;
   content: " ";
 }
 
 .popover.bottom .arrow {
-  top: -11px;
+  top: -15px;
   left: 50%;
-  margin-left: -11px;
-  border-bottom-color: #999999;
-  border-bottom-color: rgba(0, 0, 0, 0.25);
+  margin-left: -15px;
+  border-bottom-color: #5392c5;
   border-top-width: 0;
 }
 
 .popover.bottom .arrow:after {
-  top: 1px;
-  margin-left: -10px;
-  border-bottom-color: #ffffff;
+  top: 3px;
+  margin-left: -12px;
+  border-bottom-color: #efefed;
   border-top-width: 0;
   content: " ";
 }
 
 .popover.left .arrow {
   top: 50%;
-  right: -11px;
-  margin-top: -11px;
-  border-left-color: #999999;
-  border-left-color: rgba(0, 0, 0, 0.25);
+  right: -15px;
+  margin-top: -15px;
+  border-left-color: #5392c5;
   border-right-width: 0;
 }
 
 .popover.left .arrow:after {
-  right: 1px;
-  bottom: -10px;
-  border-left-color: #ffffff;
+  right: 3px;
+  bottom: -12px;
+  border-left-color: #efefed;
   border-right-width: 0;
   content: " ";
 }
