--- a/app/partials/header-directive.html
+++ b/app/partials/header-directive.html
@@ -12,7 +12,17 @@
         <div class="collapse navbar-collapse is-navbar-collapse">
             <ul class="nav navbar-nav navbar-right navbar-icons">
                 <li><a href="#"><i class="icon icon-envelop icon-light-hover"></i> <i class="{{notify.count>0 ? 'icon icon-dot-msg' : ''}}"></i></a></li>
-                <li><a href="#"><i class="icon icon-user icon-light-hover"></i></a></li>
+                <li class="dropdown">
+                    <a href="#" data-toggle="dropdown"><i class="icon icon-user icon-light-hover"></i></a>
+                    <ul class="dropdown-menu pull-left">
+                        <li><a href="#">账号设置</a></li>
+                        <li><a href="#">皮肤设置</a></li>
+                        <li><a href="#">勋章</a></li>
+                        <li><a href="#">V认证</a></li>
+                        <li><a href="#">达人</a></li>
+                        <li><a href="#">退出</a></li>
+                    </ul>
+                </li>
                 <li><a href="#"><i class="icon icon-logout icon-light-hover"></i></a></li>
             </ul>
             <form name="formSearch" action="#" class="navbar-form navbar-right">
